--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@ capybara-*.html
 /tmp
 /db/*.sqlite3
 /public/system
+/public/assets
 /coverage/
 /spec/tmp
 **.orig
 rerun.txt
 pickle-email-*.html
+.DS_Store
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 # config/initializers/secret_token.rb
